--- a/index.html
+++ b/index.html
@@ -25,11 +25,12 @@
         <input type="submit">
     </fieldset>
     </form>
-    <h3>Testnomial video</h3>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/MZvfGnyRCLE?si=devLT7SpNONEtZI9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-    <h3>Map</h3>
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3666.266320189247!2d77.44071629999999!3d23.2333939!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x397c4385f0e2c06d%3A0xe7e270912927c8c4!2sCoding%20Thinker%20-%20Best%20Coding%20Institute%20%26%20Classes%20in%20Bhopal!5e0!3m2!1smr!2sin!4v1731494567343!5m2!1smr!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-
+    <a href="testnomial.html">
+        <button style="font-size: large;">Testnomial video</button>
+    </a>
+    <a href="findus.html">
+        <button style="font-size: large;">Find us</button>
+    </a>
     
 </body>
 </html>
