--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="icon" href="CODING THINKER.jpg">
 </head>
 <body>
-    <H1>WELCOME TO THE CODING THINKER</H1><br><br>
+    <H1>WELCOME Back!!</H1><br><br>
     <form>
         <fieldset>
             <legend> Registration form</legend>
