--- a/index.html
+++ b/index.html
@@ -21,10 +21,13 @@
                <input type="checkbox">javascript <br><br>
         Photo upload: <input type="file"> <br><br>
         Resume upload: <input type="file"> <br><br>
-        About yourself: <input type="text"> <br><br>
-        <input type="submit">
+        About yourself: <input type="text">
+         <!-- <input type="submit"> -->
     </fieldset>
     </form>
+    <a href="payment.html">
+        <button style="font-size: large;">submit</button>
+    </a> <br><br>
     <a href="testnomial.html">
         <button style="font-size: large;">Testnomial video</button>
     </a>
